[gd_scene load_steps=6 format=3 uid="uid://jfeou1dw30dl"]

[ext_resource type="ArrayMesh" uid="uid://dypaaomu8xd5w" path="res://models/Bin.obj" id="1_3iw5e"]
[ext_resource type="Script" path="res://Scripts/Bin.gd" id="1_8hyoq"]
[ext_resource type="AudioStream" uid="uid://dmwrs81yc7v0g" path="res://Audio/PacketCrumple.ogg" id="3_587aj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hu82i"]
size = Vector3(1.26341, 1.13617, 0.153495)

[sub_resource type="BoxShape3D" id="BoxShape3D_c086r"]
size = Vector3(1, 1.29623, 1)

[node name="Bin" type="Node3D"]

[node name="RigidBody3D" type="RigidBody3D" parent="." groups=["Bin", "Item"]]
script = ExtResource("1_8hyoq")

[node name="Bin" type="MeshInstance3D" parent="RigidBody3D"]
mesh = ExtResource("1_3iw5e")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0545732, 0.560849, 0.378884)
shape = SubResource("BoxShape3D_hu82i")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0545732, 0.560849, -0.963265)
shape = SubResource("BoxShape3D_hu82i")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.67164, 0.560849, -0.255061)
shape = SubResource("BoxShape3D_hu82i")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.765855, 0.560849, -0.255061)
shape = SubResource("BoxShape3D_hu82i")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.0600339, 0.0147389, -0.255061)
shape = SubResource("BoxShape3D_hu82i")

[node name="Detect" type="Area3D" parent="RigidBody3D"]

[node name="DetectCollider" type="CollisionShape3D" parent="RigidBody3D/Detect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0625181, 0.758362, -0.267469)
shape = SubResource("BoxShape3D_c086r")

[node name="ThrowAwayEffect" type="AudioStreamPlayer3D" parent="RigidBody3D"]
stream = ExtResource("3_587aj")

[connection signal="body_entered" from="RigidBody3D/Detect" to="RigidBody3D" method="_on_detect_body_entered"]
[connection signal="body_exited" from="RigidBody3D/Detect" to="RigidBody3D" method="_on_detect_body_exited"]
